// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template renders default 1`] = `
"<div id=\\"dont-change-please\\" class=\\"modal\\">
  <div class=\\"modal-dialog modal-md\\">
    <div class=\\"modal-content\\">
      <div class=\\"modal-header\\">
        <h5 class=\\"modal-title\\"></h5><button class=\\"btn-close\\" data-bs-dismiss=\\"modal\\" type=\\"button\\"></button>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`template renders given custom classes 1`] = `
"<div id=\\"owow-modal\\" class=\\"modal custom-class\\">
  <div class=\\"modal-dialog modal-md\\">
    <div class=\\"modal-content\\">
      <div class=\\"modal-header header-class\\">
        <h5 class=\\"modal-title\\"></h5><button class=\\"btn-close\\" data-bs-dismiss=\\"modal\\" type=\\"button\\"></button>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;
